[package]
name = "eq-labs-node-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbag = { git = "https://github.com/aatifsyed/bitbag" }
bitcoin_hashes = "0.11.0"
bitflags = "1.3.2"
chrono = "0.4.23"
clamped = { git = "https://github.com/aatifsyed/clamped", version = "0.2.0" }
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
getset = "0.1.2"
hex = "0.4.3"
nom = "7.1.1"
nom-derive = "0.10.0"
num_enum = "0.5.7"
sha256 = "1.1.1"
static_assertions = "1.1.0"
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
zerocopy = "0.6.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
