[package]
name = "eq-labs-node-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbag = { git = "https://github.com/aatifsyed/bitbag" }
bitcoin_hashes = "0.11.0"
bitflags = "1.3.2"
bytes = "1.3.0"
chrono = "0.4.23"
clamped = { git = "https://github.com/aatifsyed/clamped", version = "0.2.0" }
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
derive_more = "0.99.17"
nom = "7.1.1"
nom-supreme = "0.8.0"
num = "0.4.0"
num_enum = "0.5.7"
static_assertions = "1.1.0"
tap = "1.0.1"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["io-std", "io-util", "net", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
zerocopy = "0.7.0-alpha.2"

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.3.0"
